# firefly

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxfile  Doxyfile  README.md  _config.yml  firefly  firefly.hpp
.devcontainer/: devcontainer.json
.github/apt-sources/: ubuntu.sources
.github/workflows/: ci.yaml  docs.yaml  unit_testing.yaml
INCLUDES/: firefly.hpp
docs/: CNAME  add_8cpp.html  add_8cpp__incl.map  add_8cpp__incl.md5  angle__with_8cpp.html  angle__with_8cpp__incl.map  angle__with_8cpp__incl.md5  annotated.html  anti__parallel_8cpp.html  area_8cpp.html  area_8cpp__incl.map  area_8cpp__incl.md5  classFirefly_1_1Vector-members.html  classFirefly_1_1Vector.html  classFirefly_1_1Vector__coll__graph.map  classes.html  cross_8cpp.html  cross_8cpp__incl.map  cross_8cpp__incl.md5  dir_000003_000001.html  dir_000004_000006.html  dir_000009_000006.html  dir_0baa9f3d984dd29d1429171590d769d6.html  dir_0baa9f3d984dd29d1429171590d769d6_dep.map  dir_0baa9f3d984dd29d1429171590d769d6_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6974064bec986529c9a68c7c75e571af.html  dir_6974064bec986529c9a68c7c75e571af_dep.map  dir_6974064bec986529c9a68c7c75e571af_dep.md5  dir_6a85b2dc5fcef8d1d6a391f1bd25b4d6.html  dir_6a85b2dc5fcef8d1d6a391f1bd25b4d6_dep.map  dir_6a85b2dc5fcef8d1d6a391f1bd25b4d6_dep.md5  dir_713acbf0246a22292b4b09ce6f71bf4b.html  dir_713acbf0246a22292b4b09ce6f71bf4b_dep.map  (+67 more)
docs/latex/: add_8cpp.tex  add_8cpp__incl.md5  angle__with_8cpp.tex  angle__with_8cpp__incl.md5  annotated.tex  anti__parallel_8cpp.tex  area_8cpp.tex  area_8cpp__incl.md5  classFirefly_1_1Vector.tex  cross_8cpp.tex  cross_8cpp__incl.md5  dir_0baa9f3d984dd29d1429171590d769d6.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6974064bec986529c9a68c7c75e571af.tex  dir_6a85b2dc5fcef8d1d6a391f1bd25b4d6.tex  dir_713acbf0246a22292b4b09ce6f71bf4b.tex  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dot_8cpp.tex  dot_8cpp__incl.md5  elem__sum_8cpp.tex  elem__sum_8cpp__incl.md5  files.tex  indexers_8cpp.tex  indexers_8cpp__incl.md5  is__normalized_8cpp.tex  is__normalized_8cpp__incl.md5  is__orthogonal_8cpp.tex  is__orthogonal_8cpp__incl.md5  is__parallel_8cpp.tex  is__parallel_8cpp__incl.md5  is__zero_8cpp.tex  is__zero_8cpp__incl.md5  magnitude_8cpp.tex  magnitude_8cpp__incl.md5  (+18 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+12 more)
examples/: CMakeLists.txt  main.cpp
headers/firefly/: utilities.hpp  vector.hpp
scripts/: test_generator.sh
src/: CMakeLists.txt  firefly  firefly.cpp
src/vector/: CMakeLists.txt  add.cpp  angle_with.cpp  anti_parallel.cpp  area.cpp  cross.cpp  dot.cpp  elem_sum.cpp  indexers.cpp  is_normalized.cpp  is_orthogonal.cpp  is_parallel.cpp  is_same.cpp  is_sparse.cpp  is_zero.cpp  magnitude.cpp  normalize.cpp  rank.cpp  scale.cpp  size.cpp  subtract.cpp  vector.cpp  view.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
tests/utilities/: CMakeLists.txt  utilities.cpp
tests/vector/: CMakeLists.txt  add.cpp  angle_with.cpp  anti_parallel.cpp  area.cpp  constructor.cpp  cross.cpp  dot.cpp  elem_sum.cpp  (+15 more)
(+117 files in other folders)
